--- a/ddr_portal/Users/Templates/admin.html
+++ b/ddr_portal/Users/Templates/admin.html
@@ -47,10 +47,10 @@
 
     <h2>Dashboard</h2>
     <div class="card-container">
-      <div class="card">
-        <h3><i class="bi bi-folder2-open"></i> Folders</h3>
-        <button>View</button>
-      </div>
+     <div class="card">
+  <h3><i class="bi bi-folder2-open"></i> Folders</h3>
+  <a href="{% url 'folder_list' %}"><button>View</button></a>
+</div>
       <div class="card">
         <h3><i class="bi bi-upload"></i> Upload</h3>
         <button>Upload</button>
