--- a/ddr_portal/Users/Templates/login.html
+++ b/ddr_portal/Users/Templates/login.html
@@ -18,6 +18,7 @@
                 {{ form.as_p }}
                 <button type="submit">Login</button>
             </form>
+            <p><a href="{% url 'password_reset' %}">Forgot Password?</a></p>
             <p>Don't have an account? <a href="{% url 'signup' %}">Sign up</a></p>
         </div>
     </div>
