--- a/ddr_portal/Users/Templates/faculty.html
+++ b/ddr_portal/Users/Templates/faculty.html
@@ -48,7 +48,7 @@
     <div class="card-container">
       <div class="card">
         <h3><i class="bi bi-folder2-open"></i> Folders</h3>
-        <button>View</button>
+        <a href="{% url 'folder_list' %}"><button>View</button></a>
       </div>
       <div class="card">
         <h3><i class="bi bi-upload"></i> Upload</h3>
