--- a/ddr_portal/Users/Templates/folder_list.html
+++ b/ddr_portal/Users/Templates/folder_list.html
@@ -127,8 +127,8 @@
     </div>
 
     <div class="right-side">
-      <i class="bi bi-house-door" onclick="location.href='{% url 'admin' %}'"></i>
-      <i class="bi bi-person-circle" onclick="location.href='profile.html'"></i>
+      <i class="bi bi-house-door" onclick="location.href='{% url 'role_redirect' %}'"></i>
+      <i class="bi bi-person-circle" onclick="location.href='{% url 'profile' %}'"></i>
     </div>
   </div>
 
