--- a/ddr_portal/Users/Templates/documents.html
+++ b/ddr_portal/Users/Templates/documents.html
@@ -154,16 +154,18 @@
 
   <div class="folder-section">
     <h2>Documents in Folder: {{ subfolder_name }}</h2>
-    <ul>
+   <ul id="documentList">
   {% for doc in documents %}
-    <li>
-      📄 {{ doc.title }}
-      - <a href="{% url 'download_excel' doc.id %}">Download Excel</a>
+    <li data-title="{{ doc.title|lower }}">
+      📄 {{ doc.title }} -
+      <a href="{% url 'download_excel' doc.id %}">Download Excel</a> |
+      <a href="{% url 'see_template' doc.id %}">See Template</a>
     </li>
   {% empty %}
     <li>No documents found in this folder.</li>
   {% endfor %}
 </ul>
+
     <a class="back-link" href="{% url 'folder_list' %}">🔙 Back to Folders</a>
   </div>
 
