--- a/ddr_portal/Users/Templates/admin.html
+++ b/ddr_portal/Users/Templates/admin.html
@@ -53,7 +53,7 @@
 </div>
       <div class="card">
         <h3><i class="bi bi-upload"></i> Upload</h3>
-        <button>Upload</button>
+        <a href="{% url 'upload_folder_list' %}"><button>Upload</button></a>
       </div>
       <div class="card">
         <h3><i class="bi bi-pencil-square"></i>Edit File Structure</h3>
