--- a/ddr_portal/Users/Templates/faculty.html
+++ b/ddr_portal/Users/Templates/faculty.html
@@ -21,7 +21,11 @@
     </div>
     <ul>
       <li class="active"><i class="bi bi-house-door"></i> Dashboard</li>
-      <li><i class="bi bi-person"></i> Profile</li>
+      <li>
+  <a href="{% url 'profile' %}" style="text-decoration: none; color: inherit;">
+    <i class="bi bi-person"></i> Profile
+  </a>
+</li>
     </ul>
   </div>
 
