--- a/ddr_portal/Users/Templates/head.html
+++ b/ddr_portal/Users/Templates/head.html
@@ -22,7 +22,11 @@
     <ul>
       <li class="active"><i class="bi bi-house-door"></i> Dashboard</li>
       <li><i class="bi bi-eye"></i> View Actions</li>
-      <li><i class="bi bi-person"></i> Profile</li>
+     <li>
+  <a href="{% url 'profile' %}" style="text-decoration: none; color: inherit;">
+    <i class="bi bi-person"></i> Profile
+  </a>
+</li>
     </ul>
   </div>
 
