--- a/ddr_portal/Users/Templates/profile.html
+++ b/ddr_portal/Users/Templates/profile.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -139,7 +140,7 @@
   <div class="top-bar">
     <div class="left-side">
       <div class="logo-placeholder">
-        <img src="file:///E:/Downloads%202.O/skit%20logo.jpg" alt="SKIT Logo">
+        <img src="{% static 'images/skit_logo.jpg' %}" alt="SKIT Logo">
       </div>
       <div class="search-box">
         
