--- a/ddr_portal/Users/Templates/admin.html
+++ b/ddr_portal/Users/Templates/admin.html
@@ -61,7 +61,9 @@
       </div>
       <div class="card">
         <h3><i class="bi bi-lock"></i> Change Permissions</h3>
-        <button>Change</button>
+        <a href="{% url 'assign_folder_role' %}">
+            <button type="button">Go to Assign Roles</button>
+        </a>
       </div>
       <div class="card">
         <h3><i class="bi bi-folder-plus"></i> Edit Folder Structure</h3>
