--- a/ddr_portal/Users/Templates/head.html
+++ b/ddr_portal/Users/Templates/head.html
@@ -49,7 +49,7 @@
     <div class="card-container">
       <div class="card">
         <h3><i class="bi bi-folder2-open"></i> Folders</h3>
-        <a href="{% url 'folder_list' %}"><button>View</button></a>
+        <a href="{% url 'accessible_folders' %}"><button>View</button></a>
       </div>
       <div class="card">
         <h3><i class="bi bi-upload"></i> Upload</h3>
