--- a/ddr_portal/Users/Templates/folder_list.html
+++ b/ddr_portal/Users/Templates/folder_list.html
@@ -133,7 +133,13 @@
   </div>
 
   <div class="breadcrumbs">
-    <a href="{% url 'admin' %}">Dashboard</a> >
+    {% if role_id == 1 %}
+        <a href="{% url 'admin' %}">Dashboard</a> >
+    {% elif role_id == 2 %}
+        <a href="{% url 'head' %}">Dashboard</a> >
+    {% elif role_id == 3 %}
+        <a href="{% url 'faculty' %}">Dashboard</a> >
+    {% endif %}
     <span>Folders</span>
   </div>
 
