final changes committed

--- a/ddr_portal/Users/Templates/documents.html
+++ b/ddr_portal/Users/Templates/documents.html
@@ -167,7 +167,7 @@
   {% endfor %}
 </ul>
 
-    <a class="back-link" href="{% url 'folder_list' %}">🔙 Back to Folders</a>
+    <a class="back-link" href="{% url 'folder_list' %}">← Back to Folder List</a>
   </div>
 
   <script>
