Edit Folder Structure

--- a/ddr_portal/Users/Templates/admin.html
+++ b/ddr_portal/Users/Templates/admin.html
@@ -72,8 +72,10 @@
         </a>
       </div>
       <div class="card">
-        <h3><i class="bi bi-folder-plus"></i> Edit Folder Structure</h3>
-        <button>Edit</button>
+      <h3><i class="bi bi-folder-plus"></i> Edit Folder Structure</h3>
+        <a href="{% url 'edit_folders' %}">
+          <button type="button">Edit</button>
+        </a>
       </div>
       <div class="card">
         <h3><i class="bi bi-clock-history"></i> View History</h3>
