--- a/ddr_portal/Users/Templates/edit_dynamic_table.html
+++ b/ddr_portal/Users/Templates/edit_dynamic_table.html
@@ -23,7 +23,14 @@
                 <input type="text" name="col_constraints_{{ forloop.counter0 }}" value="{{ col.constraints|default:'' }}" placeholder="Constraints">
 
                 <!-- Remove column button -->
-                <button type="submit" name="remove_column" value="{{ forloop.counter0 }}" style="background-color: red; color: white;">Remove</button>
+                <!-- Remove column button with confirmation -->
+                <button type="submit"
+                    name="remove_column"
+                    value="{{ forloop.counter0 }}"
+                    style="background-color: red; color: white;"
+                    onclick="return confirm('Are you sure you want to remove this column?');">
+                Remove
+                </button>
             </div>
         {% endfor %}
     </div>
