--- a/ddr_portal/Users/Templates/admin.html
+++ b/ddr_portal/Users/Templates/admin.html
@@ -83,6 +83,12 @@
         <button>View</button>
     </a>
 </div>
+     <div class="card">
+    <h3><i class="bi bi-clock-history"></i> BUTTON</h3>
+    <a href="{% url 'activity_log' %}">
+        <button>VIEW HISTORY LOG</button>
+    </a>
+</div>
 
     </div>
   </div>
